Task-2/k8s/overlays/production/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-active
  labels:
    app: flask-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flask-app

---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-preview
  labels:
    app: flask-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: flask-app
